@@ -1,3 +1,7 @@
+2007-07-05  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* lt~obsolete.m4: New. Import from 20070318 libtool.
+
 2007-06-29  Bernd Schmidt  <bernd.schmidt@analog.com>
 
 	* configure.ac: Don't add target-libmudflap to noconfigdirs for
